grafana/grafana-deployment.yaml
---
# grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-node02
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana
          securityContext:
            runAsUser: 472           # Grafana의 기본 UID
            runAsGroup: 472
            fsGroup: 472
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-pvc
